tdf#131849 Handle changed doc print options when printer changed

Previously, the SfxPrinterChangeFlags::OPTIONS flag was
only set for the case that the printer itself was considered
unchanged ('else' case below).

However, this also needs to be done when the printer is
considered to have changed, so the flag is properly
passed in the call to 'SetPrinter' below, to make
sure that changes in document-specific options are
properly propagated.

Change-Id: Id91ebbbf40888e52149b40ac25f188af4be425f3